Rider offer Address issue solve

--- a/Areas/Customer/Views/Order/DeliveryDetails.cshtml
+++ b/Areas/Customer/Views/Order/DeliveryDetails.cshtml
@@ -18,20 +18,16 @@
     <p>@Model.ShopName</p>
 
     <h4>Shop Address:</h4>
-    <p>@Model.ShopAddress</p>
+
+  
 
     <h4>Shop Contract:</h4>
     <p>@Model.ShopContract</p>
-
 
     <h4>Payable Money:</h4>
     <p>@Model.PayableMoney</p>
 </div>
 
-
 <br />
 <h3>Go For PickUp Order</h3>
-<h3>Go For Delevary</h3>
-
-
-
+<h3>Go For Delivery</h3>
