Rider Delivary Management complete

--- a/Areas/Customer/Views/Order/CreateDeliveryForAcceptedOrder.cshtml
+++ b/Areas/Customer/Views/Order/CreateDeliveryForAcceptedOrder.cshtml
@@ -47,3 +47,7 @@
 <br />
 <h3>Go For PickUp Order</h3>
 <h3>Go For Delivery</h3>
+
+
+
+<a asp-area="Rider" asp-controller="RiderDelivery" asp-action="Index" class="btn btn-primary">All Delivary</a>
