--- a/Areas/Farmer/Views/Inventory/MonthlyOrders.cshtml
+++ b/Areas/Farmer/Views/Inventory/MonthlyOrders.cshtml
@@ -1,5 +1,50 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@model List<OrganicOption.Models.Farmer_Section.DailyOrderInfoViewModel>
+
+<h4>Monthly Orders</h4>
+
+@if (Model.Any())
+{
+    <div class="table-responsive">
+
+        <table class="table table-striped table-bordered">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Order ID</th>
+                    <th scope="col">Customer Name</th>
+                    @*          <th scope="col">Address</th> *@
+                    <th scope="col">Phone</th>
+                    <th scope="col">Order Time</th>
+                    <th scope="col">Products</th>
+                    <th scope="col">Total Price</th>
+                    <th scope="col">Order Condition</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var orderInfo in Model)
+                {
+                    <tr>
+                        <td>@orderInfo.OrderId</td>
+                        <td>@orderInfo.CustomerName</td>
+                        @*                 <td>@orderInfo.Address</td> *@
+                        <td>@orderInfo.Phone</td>
+                        <td>@orderInfo.OrderTme.ToString("dd/MM/yyyy HH:mm")</td>
+                        <td>
+                            <ul>
+                                @foreach (var productInfo in orderInfo.Products)
+                                {
+                                    <li>@productInfo.Name  -  Quantity: @productInfo.Quantity  - Price: @productInfo.Price</li>
+                                }
+                            </ul>
+                        </td>
+                        <td>@orderInfo.TotalPrice</td>
+                        <td> <a class="btn"> Release </a></td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+}
+else
+{
+    <p>No orders found for today.</p>
 }
