--- a/Areas/Rider/Views/RiderDelivery/Index.cshtml
+++ b/Areas/Rider/Views/RiderDelivery/Index.cshtml
@@ -1,6 +1,18 @@
 ﻿@model IEnumerable<OrganicOption.Models.Rider_Section.Delivery>
 
 <h2>Your Deliveries</h2>
+<br />
+<br />
+
+<a class="btn btn-info"  asp-area="Rider" asp-controller="Rider" asp-action="Index"> Go For New Delivary</a>
+<a class="btn btn-info" asp-area="Rider" asp-controller="RiderDelivery" asp-action="RunningDeliveries"> Running Delivary</a>
+
+<a class="btn btn-info" asp-area="Rider" asp-controller="RiderDelivery" asp-action="RiderRevenue"> My Wallet</a>
+
+<a class="btn btn-info" asp-area="Rider" asp-controller="RiderDelivery" asp-action="DeliveredOrders" asp-route-period="daily">Daily Delivery History</a>
+
+<br />
+<br />
 
 <table class="table">
     <thead>
