--- a/Areas/Farmer/Views/Inventory/WeeklyOrders.cshtml
+++ b/Areas/Farmer/Views/Inventory/WeeklyOrders.cshtml
@@ -36,7 +36,7 @@
                                 </ul>
                             </td>
                             <td>@orderInfo.TotalPrice</td>
-                            <td><a class="btn">Release</a></td>
+                            <td>@orderInfo.OrderCondition</td>
                         </tr>
                     }
                 </tbody>
